# ComputerLand

./: README.md  docker-compose.yaml  manage.py  pyproject.toml
catalog/: models.py
computer_land/: asgi.py  settings.py  urls.py  wsgi.py
